add initial structure and style to site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emma Richards</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+    <div class="hidden-box">
+        <div class="text-box hidden">
+            <h2>Welcome to my page!</h2>
+            <p>A collection of my things</p>
+            <p>LinkedIn <a href="https://www.linkedin.com/in/emcalori/">🐱</a></p>
+        </div>
+    </div>
+
+    <div class="box-container">
+        <div class="small-box box">
+            <div class="pill">
+                <div class="arrow left-expand-arrow"></div>
+            </div>
+        </div>
+        <div class="long-box box social-fan">
+            <div class="pill"></div>
+            <div class="hidden-pill social linkedin">
+                <a href="https://www.linkedin.com/in/emcalori/">LINKEDIN</a>
+            </div>
+            <div class="hidden-pill social email">
+                <a href="mailto:emmacarolinerichards@gmail.com">EMAIL</a>
+            </div>
+            <div class="hidden-pill social coding-notes">
+                <a href="">CODING NOTES</a>
+            </div>
+        </div>
+        <div class="long-box box">
+            <div class="pill">
+                <!-- <svg></svg> -->
+            </div>
+        </div>
+        <div class="small-box box">
+            <div class="pill"></div>
+        </div>
+        <div class="long-box box">
+            <div class="pill">
+                <a href="https://www.saaa.am">INSPIRED BY SAAA.AM</a>
+            </div>
+        </div>
+        <div class="small-box box stretchable">
+            <div class="pill">
+                <a class="hidden" href="">OTHER</a>
+            </div>
+        </div>
+        <div class="small-box box stretchable">
+            <div class="pill">
+                <p class="hidden">😻</p>
+            </div>
+        </div>
+        <div class="large-box box" id="takeover">
+            <div class="pill">
+                <div class="logo-container">
+                    <img src="" alt="Emcalori logo">
+                    <div class="arrow-container">
+                        <div class="arrow right-expand-arrow"></div>
+                    </div>
+                </div>
+                <div class="text-box">
+                    <h1>Emcalori</h1>
+                    <p>About Emma</p>
+                    <p>More Info</p>
+                    <p>More Emma</p>
+                </div>
+            </div>
+        </div>
+        <div class="x-box">
+            <p>CLICK</p>
+            <!-- <svg></svg> -->
+        </div>
+        <div class="large-box box" id="squish">
+            <div class="pill">
+                <div class="text-box hidden">
+                    <p>Hello there...</p>
+                </div>
+            </div>
+        </div>
+        <div class="slider-container box">
+            <div class="pill">
+                <div class="input-container">
+                    <input type="range" id="slider-input" min="0" max="10" value="0" step="1">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script src="app.js"></script>
+</body>
+</html>
