--- a/index.html
+++ b/index.html
@@ -4,95 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma Richards</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Emcalori Projects</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/c1d955cac1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="hidden-box">
-        <div class="text-box hidden">
-            <h2>Welcome to my page!</h2>
-            <p>A collection of my things</p>
-            <p>LinkedIn <a href="https://www.linkedin.com/in/emcalori/">🐱</a></p>
+    <!-- Nav Section  -->
+    <nav class="navbar">
+        <div class="navbar_container">
+            <a href="/" id="navbar_logo"><i class="fa-icon fa-solid fa-otter"></i> EMCALORI</a>
+            <div class="navbar_toggle" id="mobile_menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="/" class="navbar_links">Home</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="#about_me" class="navbar_links" id="aboutMeButton">About Me</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="/" class="navbar_links">Blog</a>
+                </li>
+                <!-- <li class="navbar_switch">
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </li> -->
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div class="main">
+        <div class="main_container">
+            <div class="main_img_container">
+                <img src="images/coder.svg" alt="pic description" id="main_img">
+            </div>
+            <div class="main_content">
+                <h1 class="title" id="main_title">Emma Richards</h1>
+                <h2 class="title" id="second_title">Graduate Software Engineer</h2>
+                <p>FinTech | Backend | Node.js | Typescript | Perpetual Student 📚 </p>
+                <button class="main_btn"><a id="project_btn" href="#project_link">Projects</a></button>
+            </div>
         </div>
     </div>
 
-    <div class="box-container">
-        <div class="small-box box">
-            <div class="pill">
-                <div class="arrow left-expand-arrow"></div>
+    <!-- About Me Section  -->
+    <div class="about_me" id="about_me">
+        <button id="closeAboutMeButton"><span aria-hidden="true">X</span></button>
+        <h2>About Me</h2>
+        <div class="aboutMeContent">
+            <img src="./images/EmmaPP-fotor-bg-remover-20230904162328.png" alt="Picture of Emma Richards">
+            <p>
+                <span id="firstLineAboutMe">Welcome! My name is Emma Richards and I'm a graduate backend engineer working in FinTech 💷</span> <br><br>
+                During my 8 years spent in the world of physics and engineering, one tool repeatedly assisted in my research: coding! While I still loved science, I knew I wanted to explore this area more...
+                And to cut a long story short, the creativity and versatility of this field has lead to me developing full time as a software engineer at Lloyd's Banking Group 🐎 <br> <br>
+                Currently working professionally on Microservice applciations with Node.js and JavaScript/TypeScript, I'm continually aiming to further my knowledge and experience across multiple other technologies during my own time. 
+                Here, I hope to help document some of that progress! <br><br>
+                If you have any questions or would just like to reach out, feel free to message me on LinkedIn ✉️
+            </p>
+        </div>
+    </div>
+
+    <!-- Projects Section -->
+    <div class="projects" id="project_link">
+        <h1>Projects</h1>
+        <div class="projects_container">
+            <div class="project_card">
+                <h2>Flex Box Website</h2>
+                <p>Website for a fictional data-science company</p>
+                <button id="project_1_github"><a href="https://github.com/emcalori/theCompany">Go to GitHub 📂</a></button>
+                <button id="project_1_website"><a href="https://emcalori.github.io/theCompany/">Go to Website 💻</a></button>
+            </div>
+            <div class="project_card">
+                <h2>Coming Soon...</h2>
+                <p>Projects purrrrpending...</p>
+                <button>Under Construction 🚧</button>
             </div>
         </div>
-        <div class="long-box box social-fan">
-            <div class="pill"></div>
-            <div class="hidden-pill social linkedin">
-                <a href="https://www.linkedin.com/in/emcalori/">LINKEDIN</a>
-            </div>
-            <div class="hidden-pill social email">
-                <a href="mailto:emmacarolinerichards@gmail.com">EMAIL</a>
-            </div>
-            <div class="hidden-pill social coding-notes">
-                <a href="">CODING NOTES</a>
-            </div>
-        </div>
-        <div class="long-box box">
-            <div class="pill">
-                <!-- <svg></svg> -->
-            </div>
-        </div>
-        <div class="small-box box">
-            <div class="pill"></div>
-        </div>
-        <div class="long-box box">
-            <div class="pill">
-                <a href="https://www.saaa.am">INSPIRED BY SAAA.AM</a>
-            </div>
-        </div>
-        <div class="small-box box stretchable">
-            <div class="pill">
-                <a class="hidden" href="">OTHER</a>
-            </div>
-        </div>
-        <div class="small-box box stretchable">
-            <div class="pill">
-                <p class="hidden">😻</p>
-            </div>
-        </div>
-        <div class="large-box box" id="takeover">
-            <div class="pill">
-                <div class="logo-container">
-                    <img src="" alt="Emcalori logo">
-                    <div class="arrow-container">
-                        <div class="arrow right-expand-arrow"></div>
-                    </div>
-                </div>
-                <div class="text-box">
-                    <h1>Emcalori</h1>
-                    <p>About Emma</p>
-                    <p>More Info</p>
-                    <p>More Emma</p>
+    </div>
+
+    <!-- Footer Section  -->
+    <div class="footer_container">
+        <div class="footer_links">
+            <div class="footer_link_wrapper">
+                <div class="footer_link_items">
+                    <!-- <h2>Emma Richards</h2> -->
                 </div>
             </div>
         </div>
-        <div class="x-box">
-            <p>CLICK</p>
-            <!-- <svg></svg> -->
-        </div>
-        <div class="large-box box" id="squish">
-            <div class="pill">
-                <div class="text-box hidden">
-                    <p>Hello there...</p>
+        <div class="social_media">
+            <div class="social_media_wrap">
+                <div class="footer_logo">
+                    <a href="/" id="footer_logo">
+                        <i class="fa-icon fa-solid fa-otter"></i> EMCALORI</a>
+                    </a>
                 </div>
-            </div>
-        </div>
-        <div class="slider-container box">
-            <div class="pill">
-                <div class="input-container">
-                    <input type="range" id="slider-input" min="0" max="10" value="0" step="1">
+                <div id="websiteVersion">
+                    <p class="website_rights">Emcalori website v1.0.0 2023</p>
+                </div>
+                <div class="social_icons">
+                    <a href="https://www.linkedin.com/in/emcalori/" class="social_icon_link" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/emcalori" class="social_icon_link" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="/" class="social_icon_link" target="_blank">
+                        <i class="fab fa-tiktok"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-    
+
+    <!-- <p>Welcome to my page! I'm currently a graduate software developer in FinTech, so far working mainly in backend. Here I hope to showcase some of my personal projects and document my progess as I start to learn my way in the tech space 👾 </p> -->
     <script src="app.js"></script>
+    
 </body>
 </html>
