update blog url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#about_me" class="navbar_links" id="aboutMeButton">About Me</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/" class="navbar_links">Blog</a>
+                    <a href="https://emcalori.github.io/blog/" class="navbar_links">Blog</a>
                 </li>
                 <!-- <li class="navbar_switch">
                     <label class="switch">
